# zmetek

./: CMakeLists.txt  LICENSE
resources/: resources.cfg
resources/media/materials/scripts/: Zmetek.material
resources/media/models/: Zmetek.mesh
resources/raw_exports/: Zmetek.material  Zmetek.mesh  Zmetek.mesh.xml  zmetek.blend  zmetek.scene
src/: Zmetek.cpp  Zmetek.h  main.cpp
